added endpoint, refactored some code
